--- a/Feature Selection.ipynb
+++ b/Feature Selection.ipynb
@@ -118,7 +118,7 @@
     "             gamma=0.5,\n",
     "             subsample=0.6,\n",
     "             colsample_bytree=0.6,\n",
-    "             objective= 'binary:logistic', #逻辑回归损失函数\n",
+    "             objective= 'binary:logistic', ",
     "             scale_pos_weight=1,\n",
     "             reg_alpha=0,\n",
     "             reg_lambda=1,\n",
@@ -240,7 +240,6 @@
     "sorted_idx = importance.argsort()\n",
     "y_ticks = np.arange(1, len(feat)+1).flatten().tolist()\n",
     "\n",
-    "#设置输出的图片大小\n",
     "figsize = 12,9\n",
     "fig, ax = plt.subplots(figsize=figsize)\n",
     "# ax.barh(range(len(model.feature_importances_)), model.feature_importances_)\n",
@@ -256,10 +255,8 @@
     "ax.set_title(\"XGBoost Classifier Model\",font1)\n",
     "# plt.xticks(fontsize=20)\n",
     "# plt.yticks(fontsize=20)\n",
-    "# # 设置坐标标签字体大小\n",
     "# ax.set_xlabel(..., fontsize=20)\n",
     "# ax.set_ylabel(..., fontsize=20)\n",
-    "#设置坐标刻度值的大小以及刻度值的字体\n",
     "plt.tick_params(labelsize=18)\n",
     "fig.tight_layout()\n",
     "plt.savefig(plot_xgb_name_1, dpi=600)\n",
@@ -330,7 +327,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X_transform, labels, test_size=0.15, random_state=19)\n",
-    "# 搭建随机森林模型\n",
     "#XGBoost model\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "parameters= [{'learning_rate':[0.01,0.1,0.3,1],'n_estimators':[500,1000,2000,5000],'max_depth':[3,5,10]}]\n",
@@ -420,7 +416,6 @@
     "sorted_idx = importance.argsort()\n",
     "y_ticks = np.arange(1, len(feat)+1).flatten().tolist()\n",
     "\n",
-    "#设置输出的图片大小\n",
     "\n",
     "fig, ax = plt.subplots(figsize=figsize)\n",
     "# ax.barh(range(len(model.feature_importances_)), model.feature_importances_)\n",
@@ -436,10 +431,8 @@
     "ax.set_title(\"XGBoost Classifier Model\",font1)\n",
     "# plt.xticks(fontsize=20)\n",
     "# plt.yticks(fontsize=20)\n",
-    "# # 设置坐标标签字体大小\n",
     "# ax.set_xlabel(..., fontsize=20)\n",
     "# ax.set_ylabel(..., fontsize=20)\n",
-    "#设置坐标刻度值的大小以及刻度值的字体\n",
     "plt.tick_params(labelsize=18)\n",
     "fig.tight_layout()\n",
     "plt.savefig(plot_xgb_name_4, dpi=600)\n",
