--- a/Feature Selection.ipynb
+++ b/Feature Selection.ipynb
@@ -336,7 +336,7 @@
     "             gamma=0.5,\n",
     "             subsample=0.6,\n",
     "             colsample_bytree=0.6,\n",
-    "             objective= 'binary:logistic', #逻辑回归损失函数\n",
+    "             objective= 'binary:logistic', 
     "             scale_pos_weight=1,\n",
     "             reg_alpha=0,\n",
     "             reg_lambda=1,\n",
