--- a/Feature Selection.ipynb
+++ b/Feature Selection.ipynb
@@ -118,7 +118,7 @@
     "             gamma=0.5,\n",
     "             subsample=0.6,\n",
     "             colsample_bytree=0.6,\n",
-    "             objective= 'binary:logistic', #逻辑回归损失函数\n",
+    "             objective= 'binary:logistic', #Logistic regression loss function",
     "             scale_pos_weight=1,\n",
     "             reg_alpha=0,\n",
     "             reg_lambda=1,\n",
@@ -240,7 +240,7 @@
     "sorted_idx = importance.argsort()\n",
     "y_ticks = np.arange(1, len(feat)+1).flatten().tolist()\n",
     "\n",
-    "#设置输出的图片大小\n",
+    "#Set the output image size\n",
     "figsize = 12,9\n",
     "fig, ax = plt.subplots(figsize=figsize)\n",
     "# ax.barh(range(len(model.feature_importances_)), model.feature_importances_)\n",
