--- a/Feature Selection.ipynb
+++ b/Feature Selection.ipynb
@@ -256,10 +256,10 @@
     "ax.set_title(\"XGBoost Classifier Model\",font1)\n",
     "# plt.xticks(fontsize=20)\n",
     "# plt.yticks(fontsize=20)\n",
-    "# # 设置坐标标签字体大小\n",
+    "# # Set the font size of the coordinate label\n",
     "# ax.set_xlabel(..., fontsize=20)\n",
     "# ax.set_ylabel(..., fontsize=20)\n",
-    "#设置坐标刻度值的大小以及刻度值的字体\n",
+    "#Set the size of the coordinate scale value and the font of the scale value\n",
     "plt.tick_params(labelsize=18)\n",
     "fig.tight_layout()\n",
     "plt.savefig(plot_xgb_name_1, dpi=600)\n",
@@ -340,7 +340,7 @@
     "             gamma=0.5,\n",
     "             subsample=0.6,\n",
     "             colsample_bytree=0.6,\n",
-    "             objective= 'binary:logistic', #逻辑回归损失函数\n",
+    "             objective= 'binary:logistic', #Logistic regression loss function\n",
     "             scale_pos_weight=1,\n",
     "             reg_alpha=0,\n",
     "             reg_lambda=1,\n",
@@ -420,7 +420,7 @@
     "sorted_idx = importance.argsort()\n",
     "y_ticks = np.arange(1, len(feat)+1).flatten().tolist()\n",
     "\n",
-    "#设置输出的图片大小\n",
+    "#Set the output image size\n",
     "\n",
     "fig, ax = plt.subplots(figsize=figsize)\n",
     "# ax.barh(range(len(model.feature_importances_)), model.feature_importances_)\n",
@@ -436,10 +436,10 @@
     "ax.set_title(\"XGBoost Classifier Model\",font1)\n",
     "# plt.xticks(fontsize=20)\n",
     "# plt.yticks(fontsize=20)\n",
-    "# # 设置坐标标签字体大小\n",
+    "# # Set the font size of the coordinate label\n",
     "# ax.set_xlabel(..., fontsize=20)\n",
     "# ax.set_ylabel(..., fontsize=20)\n",
-    "#设置坐标刻度值的大小以及刻度值的字体\n",
+    "#Set the size of the coordinate scale value and the font of the scale value\n",
     "plt.tick_params(labelsize=18)\n",
     "fig.tight_layout()\n",
     "plt.savefig(plot_xgb_name_4, dpi=600)\n",
