--- a/Feature Selection.ipynb
+++ b/Feature Selection.ipynb
@@ -330,7 +330,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X_transform, labels, test_size=0.15, random_state=19)\n",
-    "# 搭建随机森林模型\n",
+    "# Build a random forest model\n",
     "#XGBoost model\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "parameters= [{'learning_rate':[0.01,0.1,0.3,1],'n_estimators':[500,1000,2000,5000],'max_depth':[3,5,10]}]\n",
