--- a/Regression Analysis.ipynb
+++ b/Regression Analysis.ipynb
@@ -353,7 +353,7 @@
       " [11.69260207  0.         -0.          0.         -3.44004745  0.\n",
       " -0.         -0.         -0.         -0.          0.          0.\n",
       "  0.        ]\n",
-      "模型截距:\n",
+      "Model intercept:\n",
       "20.165918051544395\n"
      ]
     },
